export interface Attachment {
  // TODO: fields
}