export interface Comment {
  // TODO: fields
}