@startuml
'https://plantuml.com/class-diagram
class Member {
    id: string
    avatar: string
    name: string
    login: string
    password: string
}

class Board {
    id: string
    cover: Image
    private: boolean
    name: string
    description: string
}

class List {
    id: string
    position: int
    name: string
}

class Card {
    position: int
    id: string
    title: string
    coverURL: string
    description: string
}

enum Colors {
    GREEN
    YELLOW
    ORANGE
    RED
    BLUE
    LIGHTBLUE
    LIGHTGREEN
    BLACK
    DARK
    GREY
    LIGHTGREY
    LIGHT
}

class Label {
    id: string
    name: string
    color: Colors
}

class Comment {
    id: string
    createdAt: Date
    updatedAt: Date
    content: string
}

class Attachment {
    id: string
    link: string
    title: string
    coverURL: string
    addedAt: Date
}

class Participation {
    isAdmin: boolean
}

'Member "Many" --o "Many" Board : participates in

Member "One" -- "Many" Participation : Participates in
Participation "Many" -* "One" Board : participants

Board *-- List : Contains
List *-- Card : Contains
Card *-- Attachment : Contains
Card "One" o-- "Many" Comment : Contains

Card "Many" o-- "Many" Label : Has

Label --* Board  : Belongs To

Member *-- Comment : Writes

@enduml